--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ a {color: inherit;}
 
 header {
     position: relative;
-    background: darkgray url('../image/front31.jpg') right bottom no-repeat;
+    background: darkgray url(front31.jpg) right bottom no-repeat;
     background-size: cover;
     background-attachment: fixed;
     height: 100vh;
@@ -130,7 +130,7 @@ header > p{
     align-items: center;
     flex-direction: row-reverse;
     height: 85vh;
-    background: lightgray url(../image/pexels-miguel-á-padriñán-3930092.jpg) left center no-repeat;
+    background: lightgray url(pexels-miguel-á-padriñán-3930092.jpg) left center no-repeat;
     background-size: cover;
     background-attachment: fixed;
 }
@@ -225,7 +225,7 @@ header > p{
 /*contate*/
 .contate {
     height: 70vh;
-    background: gray url('../image/contate21.jpg') center center no-repeat;
+    background: gray url(contate21.jpg) center center no-repeat;
     background-size: cover;
     display: flex;
     justify-content: space-evenly;
