--- a/responsive-940.css
+++ b/responsive-940.css
@@ -22,7 +22,7 @@
 
 @media screen {
     .services{
-        background: lightgray url(../image/pexels-miguel-á-padriñán-3930092.jpg) center center no-repeat;
+        background: lightgray url(pexels-miguel-á-padriñán-3930092.jpg) center center no-repeat;
     }
     .list-services {
         display: grid;
