--- a/style-services.css
+++ b/style-services.css
@@ -3,7 +3,7 @@
 @charset "UTF-8";
 
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700;900&display=swap');
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
+
 
 :root{
     --font: 'Source Sans Pro', sans-serif;
@@ -56,7 +56,7 @@ header > h2 {
 
 #gallery {
     margin-top: 30px;
-    padding: 10px;
+    padding: 30px;
 }
 .card-group {
     display: flex;
@@ -66,6 +66,67 @@ header > h2 {
     gap: 20px 1%;
 
 }
-.test{
-    max-width: 400px;
+.block-card{
+    max-width: 300px;
+}
+
+.portifolio-obras{
+    width: 300px;
+}
+.items:hover {
+    pointer-events: none;
+}
+.items {
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch;
+    scroll-behavior: smooth;
+}
+.item {
+    flex: none;
+    width: 100%;
+    height: 400px;
+    scroll-snap-align: start;
+    pointer-events: none;
+}
+.item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.stop-scrolling {
+    height: 100%;
+    overflow: hidden;
+  }
+
+
+
+  /*footer*/
+.rodape {
+    color: white;
+    font: normal var(--font-min) 0.8em var(--font);
+    display: flex;
+    justify-content: space-around;
+    background-color: black;
+    padding-top: 10px;
+}
+
+#dev {
+    font: normal var(--font-dest) 1em var(--font);
+    color: white;
+}
+#dev:hover{
+    text-decoration: underline;
+    color: white;
+}
+
+@media screen and (max-width: 450px){
+    header > h2 {
+        font-size: 3em;
+    }
+    .rodape {
+        font-size: 0.5em;
+    }
+       
 }
