--- a/style-services.css
+++ b/style-services.css
@@ -54,8 +54,8 @@ header > h2 {
     transform: translate(0%, -50%);
 }
 
+
 #gallery {
-    margin-top: 30px;
     padding: 30px;
 }
 .card-group {
@@ -100,6 +100,9 @@ header > h2 {
     overflow: hidden;
   }
 
+.card-img-top:hover{
+    box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.719);
+}
 
 
   /*footer*/
