--- a/style.css
+++ b/style.css
@@ -182,6 +182,9 @@ header > p{
     color: black;
 }
 
+.carousel-inner {
+    height: 50vh;
+}
 
 
 
@@ -189,7 +192,7 @@ header > p{
 
 /*contate*/
 .contate {
-    height: 70vh;
+    height: 75vh;
     background: gray url(contate21.jpg) center center no-repeat;
     background-size: cover;
     display: flex;
@@ -199,7 +202,7 @@ header > p{
     color: white;
     box-shadow: 0px 0px 5px black;
 }
-/*phome*/
+/*phone*/
 .contate-numbers h3 {
     font: normal var(--font-dest) 3em var(--font);
     color: var(--color-main);
