--- a/style-services.css
+++ b/style-services.css
@@ -3,6 +3,7 @@
 @charset "UTF-8";
 
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700;900&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
 
 
 :root{
@@ -70,37 +71,8 @@ header > h2 {
     max-width: 300px;
 }
 
-.portifolio-obras{
-    width: 300px;
-}
-.items:hover {
-    pointer-events: none;
-}
-.items {
-    display: flex;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    -webkit-overflow-scrolling: touch;
-    scroll-behavior: smooth;
-}
-.item {
-    flex: none;
-    width: 100%;
-    height: 400px;
-    scroll-snap-align: start;
-    pointer-events: none;
-}
-.item img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.stop-scrolling {
-    height: 100%;
-    overflow: hidden;
-  }
 
-.card-img-top:hover{
+.block-card:hover{
     box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.719);
 }
 
@@ -132,4 +104,23 @@ header > h2 {
         font-size: 0.5em;
     }
        
+}
+
+.plus {
+    position: relative;
+    font-size: 36px;
+    left: 2px;
+    bottom: 5.8px;
+    
+}
+
+.background-plus {
+    position: absolute;
+    top: 270px;
+    right: 8px;
+    height: 40px;
+    width: 40px;
+    color: var(--color-main);
+    background-color: rgba(0, 0, 0, 0.76);
+    border-radius: 50%;
 }
