--- a/style-services.css
+++ b/style-services.css
@@ -76,6 +76,28 @@ header > h2 {
     box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.719);
 }
 
+.plus {
+    position: relative;
+    font-size: 36px;
+    left: 2px;
+    bottom: 5.8px;
+}
+
+.background-plus {
+    position: absolute;
+    top: 270px;
+    right: 8px;
+    height: 40px;
+    width: 40px;
+    color: var(--color-main);
+    background-color: rgba(0, 0, 0, 0.76);
+    border-radius: 50%;
+}
+
+.background-plus:hover {
+    color: var(--color-title);
+}
+
 
   /*footer*/
 .rodape {
@@ -106,21 +128,5 @@ header > h2 {
        
 }
 
-.plus {
-    position: relative;
-    font-size: 36px;
-    left: 2px;
-    bottom: 5.8px;
-    
-}
 
-.background-plus {
-    position: absolute;
-    top: 270px;
-    right: 8px;
-    height: 40px;
-    width: 40px;
-    color: var(--color-main);
-    background-color: rgba(0, 0, 0, 0.76);
-    border-radius: 50%;
-}
+
