--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
     --color-main: #F6D018;
     --color-light:#fdeb92; 
-    --color-strong: #6d5f19;
+    --color-strong: #948122;
     --color-title: #c5ac1b;
 }
 
@@ -139,7 +139,7 @@ header > p{
     align-items: center;
     flex-direction: row-reverse;
     height: 85vh;
-    background: lightgray url(pexels-miguel-á-padriñán-3930092.jpg) left center no-repeat;
+    background: lightgray url(services.jpg) left center no-repeat;
     background-size: cover;
     background-attachment: fixed;
     box-shadow: 0px 0px 5px black;
