--- a/style.css
+++ b/style.css
@@ -177,6 +177,9 @@ header > p{
     align-items: center;
     gap: 10px;
     padding: 20px 5vw;
+    background: lightgray url(work-background.jpg) right center repeat;
+    
+    
 
     /*display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -205,7 +208,9 @@ header > p{
     text-decoration: none;
 }
 
-
+#carousel-gallery{
+    border: 2px solid black;
+}
 
 
 
