--- a/style-mqw-700.css
+++ b/style-mqw-700.css
@@ -1,4 +1,21 @@
 @media screen {
+
+    /*Whatsapp Button*/
+
+    .whatsapp-link{
+        width: 100%;
+        height: 50px;
+        bottom: 0%;
+        right: 0px;
+        border-radius: 15px 15px 0px 0px;
+        font-size: 35px;
+    }
+
+    .whatsapp-link .bi-whatsapp{
+        font-size: 30px;
+    }
+
+
     /*header*/
     header > p{
         font-size: 1.2em;
@@ -56,5 +73,6 @@
 
     footer{
         font-size: 0.65em;
+        height: 100px;
     }
 }
